[gd_scene load_steps=5 format=3 uid="uid://bj52bms48r7oo"]

[ext_resource type="Script" path="res://scene/prefab/debug_tool/debug.gd" id="1_n22l7"]

[sub_resource type="LabelSettings" id="LabelSettings_u3yj1"]
font_color = Color(0.266667, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dy4xn"]
font_color = Color(0.266667, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aw2rm"]
font_color = Color(0.266667, 1, 0, 1)

[node name="debug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n22l7")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 158.0
offset_bottom = 86.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 130.0
theme_override_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 5.0
offset_right = 150.0
offset_bottom = 130.0
theme_override_constants/separation = 0

[node name="fps" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 145.0
offset_bottom = 26.0
text = "FPS"
label_settings = SubResource("LabelSettings_u3yj1")

[node name="state_enter" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 26.0
offset_right = 145.0
offset_bottom = 52.0
text = "state enter"
label_settings = SubResource("LabelSettings_dy4xn")

[node name="state_exit" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 52.0
offset_right = 145.0
offset_bottom = 78.0
text = "state exit"
label_settings = SubResource("LabelSettings_dy4xn")

[node name="velocity" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 78.0
offset_right = 145.0
offset_bottom = 104.0
text = "velocity"
label_settings = SubResource("LabelSettings_aw2rm")
clip_text = true

[node name="on_floor" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 104.0
offset_right = 145.0
offset_bottom = 130.0
text = "is on floor"
label_settings = SubResource("LabelSettings_aw2rm")
clip_text = true
